--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,5 +23,8 @@
       </header>
       <%= yield %>
     </div>
+    <footer id="site-footer">
+      Made by <a href="#" target="_blank"><p>jo</p></a>
+    </footer>
   </body>
 </html>
