--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -6,7 +6,7 @@
       <p><strong>RECEIPT</strong></p>
       <div id="receipt-details" class="row clearfix">
         <div class="col-sm-8 receipt-left">
-          <p><strong class="font-weight-heavy">Your Product</strong><br/> <span class="font-weight-light">What you sold</span></p>
+          <p><strong class="font-weight-heavy"><%= @product.title %></strong><br/> <span class="font-weight-light">What you bought</span></p>
         </div>
         <div class="col-sm-4">
           $4.99
