Introduce stripe plans.

--- a/app/views/purchase_mailer/purchase_receipt.html.erb
+++ b/app/views/purchase_mailer/purchase_receipt.html.erb
@@ -1,3 +1,1 @@
-<p>Thanks!</p>
-
-<%= link_to "Download your product", "https://s3-us-west-2.amazonaws.com/stripe-app-bucket/witcher-thumb.jpg" %>
+<p>Check your email for the download link.</p>
