--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -13,7 +13,7 @@
         </div>
       </div>
 
-      <a href="https://s3-us-west-2.amazonaws.com/stripe-app-bucket/witcher-thumb.jpg"><button type="button" class="btn btn-success btn-xs">DOWNLOAD</button></a>
+      <a href="<%= @product.download_url %>"><button type="button" class="btn btn-success btn-xs">DOWNLOAD</button></a>
       <footer id="receipt-footer">
         <small>Your purchase is complete. We hope you enjoy it!</small>
       </footer>
