--- a/app/views/layouts/purchase_mailer.html.erb
+++ b/app/views/layouts/purchase_mailer.html.erb
@@ -3,11 +3,11 @@
   <head>
     <title>Yo yo</title>
   </head>
-  
+
   <body>
 
     <%= yield %>
-    <p> Thanks for your purchase! </p>
+    <p> Thanks again for your purchase! </p>
 
   </body>
 </html>
